--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -36,6 +36,29 @@
 }
 
 
+@mixin wz($breakpoint) {
+  @if $breakpoint == small {
+    @media (min-width: 0) and (max-width: 480px) {
+        @content; 
+    }
+} @else if $breakpoint == medium {
+    @media (min-width: 481px) and (max-width: 768px) {
+        @content; 
+    }
+} @else if $breakpoint == large {
+    @media (min-width: 769px) and (max-width: 1279px) {
+        @content; 
+    }
+} @else if $breakpoint == xlarge {
+    @media (min-width: 1280px) {
+        @content; 
+    }
+}
+}
+
+
+
+
 @mixin jamsil($fw,$fz){
   @if $fw == 100 {
     font-family: 'jsThin';
