--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -63,12 +63,28 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  html {
+    overflow-x: visible;
+  }
+}
+
 body {
   line-height: 1;
+  width: 100vw;
   overflow-x: hidden;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  body {
+    overflow-x: visible;
+  }
 }
 
 ol, ul {
@@ -170,7 +186,6 @@ footer {
           clip-path: polygon(0 0, 0 0, 100% 0, 100% 0);
   background-color: red;
 }
-
 .footer-infomation--Wrapper {
   position: absolute;
   width: 100%;
@@ -189,6 +204,11 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .footer-infomation {
+    top: 0;
+  }
 }
 
 .footer-left {
@@ -270,6 +290,11 @@ header {
   font-size: 1em;
   background-color: white;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  header {
+    display: none;
+  }
+}
 
 .headerWrapper {
   position: relative;
@@ -324,7 +349,7 @@ header {
   color: rgb(0, 0, 0);
 }
 
-.index-section03--wrapper .index-section03--reasonFirst {
+.index-section03--reasonFirst {
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -355,6 +380,24 @@ header {
   30% {
     opacity: 100%;
     top: 62%;
+  }
+  70% {
+    opacity: 100%;
+    top: 6%;
+  }
+  100% {
+    opacity: 0%;
+    top: 6%;
+  }
+}
+@keyframes scrollBallSmall {
+  0% {
+    opacity: 0%;
+    top: 49%;
+  }
+  30% {
+    opacity: 100%;
+    top: 49%;
   }
   70% {
     opacity: 100%;
@@ -424,17 +467,8 @@ header {
 }
 @media (min-width: 0) and (max-width: 480px) {
   .index-section01--textWrapper {
-    display: none;
-  }
-}
-@media (min-width: 481px) and (max-width: 768px) {
-  .index-section01--textWrapper {
-    display: none;
-  }
-}
-@media (min-width: 769px) and (max-width: 1279px) {
-  .index-section01--textWrapper {
-    display: none;
+    width: 100vw;
+    bottom: 10vh;
   }
 }
 .index-section01--textWrapper .index-section01--welcome,
@@ -453,9 +487,20 @@ header {
   letter-spacing: 3px;
   line-height: 35px;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--textWrapper .index-section01--welcome p {
+    font-size: 1em;
+  }
+}
 .index-section01--textWrapper .index-section01--title h3 {
   font-family: "jsMedium";
   font-size: 32px;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--textWrapper .index-section01--title h3 {
+    font-size: 1.7em;
+    word-spacing: 0.2em;
+  }
 }
 
 .index-section01--videoControls--OpenWrapper {
@@ -467,6 +512,11 @@ header {
   display: flex;
   justify-content: start;
   align-items: center;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--videoControls--OpenWrapper {
+    display: none;
+  }
 }
 .index-section01--videoControls--OpenWrapper .index-section01--openBtnWrp {
   position: relative;
@@ -563,6 +613,11 @@ header {
   left: 50%;
   transform: translateX(-50%);
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--howToUse {
+    bottom: 1vh;
+  }
+}
 .index-section01--howToUse .index-section01-scrollIcon {
   position: absolute;
   width: 30px;
@@ -570,6 +625,12 @@ header {
   border-radius: 18px 18px 18px 18px;
   transform: translateY(-100%);
   border: 2px solid rgb(255, 255, 255);
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--howToUse .index-section01-scrollIcon {
+    width: 25px;
+    height: 42px;
+  }
 }
 .index-section01--howToUse .index-section01-scrollIcon::after {
   content: "";
@@ -581,7 +642,19 @@ header {
   background-color: white;
   left: 50%;
   transform: translateX(-50%);
-  animation: scrollBall 1.7s ease-in-out 0.7s infinite;
+  animation: 1.7s ease-in-out 0.7s infinite;
+}
+@media (min-width: 1280px) {
+  .index-section01--howToUse .index-section01-scrollIcon::after {
+    animation-name: scrollBall;
+  }
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--howToUse .index-section01-scrollIcon::after {
+    width: 18px;
+    height: 18px;
+    animation-name: scrollBallSmall;
+  }
 }
 
 .index-section01--videoControlsWrapper {
@@ -606,6 +679,11 @@ header {
   width: 100%;
   height: 20%;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--videoControlsWrapper .index-section01--detailControls {
+    top: 0;
+  }
+}
 .index-section01--videoControlsWrapper .index-section01--controls--videoRangeWrapper {
   width: 100%;
   padding: 3% 2.5vw;
@@ -618,6 +696,11 @@ header {
   width: 100%;
   height: 23px;
   border-radius: 1px;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--videoControlsWrapper .index-section01--controls--videoRangeWrapper .index-section01--controls--rangeLow {
+    display: none;
+  }
 }
 .index-section01--videoControlsWrapper .index-section01--controls--videoRangeWrapper .index-section01--controls--rangeLow .index-section01--controls--range {
   position: absolute;
@@ -659,6 +742,11 @@ header {
   overflow: hidden;
   align-items: center;
   transform: scale(1);
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--controls--closeBtn {
+    display: none;
+  }
 }
 .index-section01--controls--closeBtn button {
   display: flex;
@@ -733,6 +821,12 @@ header {
   margin-right: 2.5vw;
   overflow: hidden;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section01--controls--Btn--mute {
+    left: 0;
+    width: 4.5em;
+  }
+}
 .index-section01--controls--Btn--mute .index-section01--controls--Btn--effect {
   position: absolute;
   width: 100%;
@@ -760,11 +854,21 @@ header {
 .index-section-02 {
   position: relative;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section-02 {
+    height: auto;
+  }
+}
 
 .index-section02--wrapper {
   position: relative;
   width: 100%;
   height: 100%;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section02--wrapper {
+    height: 100vh;
+  }
 }
 
 .index-section02--title {
@@ -807,6 +911,13 @@ header {
   position: relative;
   z-index: 2;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section02--textWrappers {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+}
 .index-section02--textWrappers .index-section02--textWrapper {
   width: 220px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -817,6 +928,11 @@ header {
 }
 .index-section02--textWrappers .index-section02--textWrapper.open {
   border: 1px solid rgba(0, 0, 0, 0.5);
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section02--textWrappers .index-section02--textWrapper {
+    width: 80%;
+  }
 }
 .index-section02--textWrappers .index-section02--textWrapper .index-section02--subTitle {
   font-family: "jsMedium";
@@ -922,6 +1038,11 @@ header {
   margin-bottom: 8%;
   display: flex;
   justify-content: space-between;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section02--imagesWrapper {
+    display: none;
+  }
 }
 .index-section02--imagesWrapper .index-section02--imageSlides {
   display: flex;
@@ -1134,6 +1255,13 @@ header {
   display: flex;
   justify-content: end;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--wrapper {
+    display: block !important;
+    height: auto;
+  }
+}
+
 .index-section03--reasonFirst {
   width: 100%;
   height: 40%;
@@ -1141,9 +1269,26 @@ header {
   align-items: flex-start;
   justify-content: space-between;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst {
+    display: block !important;
+    height: 520vh;
+    padding: 100vh 0;
+    position: relative;
+  }
+}
 .index-section03--reasonFirst .index-section03--whatIsAnimation {
   width: 50%;
   position: relative;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst .index-section03--whatIsAnimation {
+    display: block;
+    width: 100%;
+    position: sticky;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black,
 .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray {
@@ -1159,12 +1304,32 @@ header {
   word-spacing: 0.5em;
   line-height: 1.2em;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black p, .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black span,
+  .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray p,
+  .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray span {
+    font-size: 1.15em;
+  }
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+  }
+}
 .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black p {
   width: 100%;
   -webkit-clip-path: polygon(0 0, 0% 0%, 0% 0%, 0% 0%);
           clip-path: polygon(0 0, 0% 0%, 0% 0%, 0% 0%);
   transition: 0.5s;
   color: #000;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray {
+    position: relative;
+    text-align: center;
+  }
 }
 .index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray p {
   transition: 0.5s;
@@ -1180,16 +1345,40 @@ header {
   background-color: blue;
   opacity: 0.5;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst .index-section03--experienceAni {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/10;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 .index-section03--reasonFirst .index-section03--titleWrapper {
   position: absolute;
   top: 100%;
   z-index: 2;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst .index-section03--titleWrapper {
+    display: none;
+  }
 }
 .index-section03--reasonFirst .index-section03--titleWrapper .index-section03--titles p {
   padding-bottom: 0.5em;
   font-family: "jsExtraBold";
   font-size: 6em;
   transition: 0.2s;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonFirst .index-section03--titleWrapper .index-section03--titles p {
+    font-size: 1em;
+  }
 }
 .index-section03--reasonFirst .index-section03--titleWrapper .index-section03--titles p:hover {
   letter-spacing: 0.1em;
@@ -1204,14 +1393,33 @@ header {
   height: 50%;
   margin-bottom: 1%;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonSecond {
+    height: 320vh;
+    display: block;
+  }
+}
 .index-section03--reasonSecond .index-section03--whyDoIMade {
   width: 40%;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonSecond .index-section03--whyDoIMade {
+    width: 100%;
+    position: sticky;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 .index-section03--reasonSecond .index-section03--whyDoIMade p {
   font-family: "jsRegular";
   font-size: 1.3em;
   word-spacing: 0.6em;
   line-height: 1.2em;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .index-section03--reasonSecond .index-section03--whyDoIMade p {
+    font-size: 1.2em;
+  }
 }
 
 @keyframes showContent {
