--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,3 +1,7 @@
+@use '../abstracts/variables';
+
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,13 +28,26 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+html {
+	width: 100vw;
+  overflow-x: hidden;
+	@include variables.wz(small){
+		overflow-x: visible;
+	}
+}
 body {
 	line-height: 1;
+	width: 100vw;
   overflow-x: hidden;
 	-webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;	
-  user-select:none
+  user-select:none;
+
+
+	@include variables.wz(small){
+		overflow-x: visible;
+	}
 }
 ol, ul {
 	list-style: none;
