--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -207,7 +207,7 @@ footer {
 }
 @media (min-width: 0) and (max-width: 480px) {
   .footer-infomation {
-    top: 0;
+    flex-direction: column;
   }
 }
 
@@ -219,6 +219,17 @@ footer {
   flex-direction: column;
   padding-right: 10%;
 }
+@media (min-width: 0) and (max-width: 480px) {
+  .footer-left {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+  }
+  .footer-left .footer-navToFrist {
+    display: none;
+  }
+}
 
 .footer-title p {
   transform: scaleY(1.05);
@@ -226,6 +237,12 @@ footer {
   font-size: 75px;
   letter-spacing: -1px;
   width: 100%;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .footer-title p {
+    font-size: 3em;
+    letter-spacing: 1px;
+  }
 }
 
 .footer-navToFrist a {
@@ -245,6 +262,11 @@ footer {
   align-items: start;
   font-family: "jsRegular";
   font-size: 13px;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .footer-right {
+    flex-direction: column;
+  }
 }
 
 .footer-info--first {
@@ -292,7 +314,7 @@ header {
 }
 @media (min-width: 0) and (max-width: 480px) {
   header {
-    display: none;
+    top: -5vh;
   }
 }
 
@@ -320,9 +342,34 @@ header {
   cursor: pointer;
 }
 
+.headerMenu {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  mix-blend-mode: multiply;
+  color: white;
+  background-color: red;
+  z-index: 10;
+}
+
 .headerNavWrapper {
   display: flex;
   gap: 5vw;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .headerNavWrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: gray;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    -webkit-clip-path: polygon(100% 0%, 100% 100%, 100% 100%, 100% 0);
+            clip-path: polygon(100% 0%, 100% 100%, 100% 100%, 100% 0);
+  }
 }
 
 .headerNav {
@@ -347,6 +394,19 @@ header {
 }
 .headerNav:hover a {
   color: rgb(0, 0, 0);
+}
+
+.headerCreate {
+  display: none;
+}
+@media (min-width: 0) and (max-width: 480px) {
+  .headerCreate {
+    display: block;
+    position: fixed;
+    bottom: 2vw;
+    left: 2vw;
+    color: white;
+  }
 }
 
 .index-section03--reasonFirst {
@@ -824,7 +884,7 @@ header {
 @media (min-width: 0) and (max-width: 480px) {
   .index-section01--controls--Btn--mute {
     left: 0;
-    width: 4.5em;
+    width: 5.5em;
   }
 }
 .index-section01--controls--Btn--mute .index-section01--controls--Btn--effect {
