--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -30,6 +30,8 @@ footer {
   width: 100%;
   height: 300px;
   overflow: hidden;
+
+
 }
 .footer-infomation{
   background-color: #757575;
@@ -42,8 +44,9 @@ footer {
   @include variables.flexjc(space-between);
   align-items: flex-start;
   
+
   @include variables.wz(small){
-    top: 0;
+    flex-direction: column;
   }
 }
 
@@ -53,6 +56,18 @@ footer {
   height: 80%;
   flex-direction: column;
   padding-right: 10%;
+
+
+  @include variables.wz(small){
+   width: 100%;
+   align-items: center;
+   justify-content: center;
+   padding: 0;
+   .footer-navToFrist{
+    display: none;
+   }
+  }
+  
 }
 .footer-title {
   p{
@@ -61,6 +76,10 @@ footer {
     letter-spacing: -1px;
     width: 100%;
 
+    @include variables.wz(small){
+      font-size: 3em;
+      letter-spacing: 1px;
+    }
   }
 }
 .footer-navToFrist {
@@ -80,6 +99,10 @@ footer {
   display: flex;
   align-items: start;
   @include variables.jamsil(400, 13px);
+
+  @include variables.wz(small){
+    flex-direction: column;
+  }
 }
 
 .footer-info--first {
